// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`and 1`] = `
ParseOK {
  "value": Array [
    "x",
    "y",
  ],
}
`;

exports[`and failure 1`] = `
ParseFail {
  "expected": Array [
    "y",
  ],
  "location": SourceLocation {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`and failure 2`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`and failure 3`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`and failure 4`] = `
ParseFail {
  "expected": Array [
    "x",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`and success triple 2 1`] = `
ParseOK {
  "value": Array [
    "x",
    "y",
    "z",
  ],
}
`;

exports[`and triple 1`] = `
ParseOK {
  "value": Array [
    Array [
      "x",
      "y",
    ],
    "z",
  ],
}
`;

exports[`lisp lists 1`] = `
ParseOK {
  "value": Array [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`many0 1`] = `
ParseOK {
  "value": Array [],
}
`;

exports[`many0 2`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`many0 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`many0 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many0 5`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many0 6`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
    "a",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`many1 1`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`many1 2`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`many1 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many1 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many1 5`] = `
ParseOK {
  "value": Array [],
}
`;

exports[`many1 6`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
    "a",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`match 1`] = `
ParseOK {
  "value": "12",
}
`;

exports[`match 2`] = `
ParseFail {
  "expected": Array [
    "/\\\\d+/",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`matchEOF 1`] = `
ParseOK {
  "value": "<EOF>",
}
`;

exports[`matchEOF 2`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`or 1`] = `
ParseOK {
  "value": "a",
}
`;

exports[`or 2`] = `
ParseOK {
  "value": "b",
}
`;

exports[`or 3`] = `
ParseFail {
  "expected": Array [
    "a",
    "b",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`or 4`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
  ],
  "location": SourceLocation {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`or 5`] = `
ParseFail {
  "expected": Array [
    "a",
    "b",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`separatedBy0 1`] = `
ParseOK {
  "value": Array [],
}
`;

exports[`separatedBy0 2`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`separatedBy0 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`separatedBy0 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`separatedBy0 5`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": SourceLocation {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`separatedBy0 6`] = `
ParseFail {
  "expected": Array [
    "<EOF>",
    "a",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`separatedBy1 1`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`separatedBy1 2`] = `
ParseOK {
  "value": Array [
    "a",
  ],
}
`;

exports[`separatedBy1 3`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`separatedBy1 4`] = `
ParseOK {
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`separatedBy1 5`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": SourceLocation {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`separatedBy1 6`] = `
ParseFail {
  "expected": Array [
    "a",
  ],
  "location": SourceLocation {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`test a test 1`] = `
ParseOK {
  "value": "x",
}
`;
